# mkedev

./: .env.local.example  .eslintrc.js  .gitignore  .mcp.json  .prettierignore  .prettierrc  CLAUDE.md  README.md  devlog.md  mkedev-logo.af  package.json  pnpm-lock.yaml  press-release-publications.md  tsconfig.base.json  vercel.json
.claude/agents/: mapbox-esri-layer-builder.md
.claude/commands/: git-push.md  readme.md
.github/workflows/: refresh-tiles.yml
agent-os/: config.yml
agent-os/product/: ai-visualizer-deep-dive.md  context-caching-deep-dive.md  gemini-3-architecture.md  gemini-live-api-documentation.md  mission.md  roadmap.md  tech-stack.md  zoning-ai-demo-questions.md
apps/agents/: README.md  package.json  tsconfig.json
apps/agents/planning-ingestion/: .env.example  README.md  agent.py  config.py  convex_client.py  main.py  observability.py  pyproject.toml
apps/agents/planning-ingestion/scripts/: run-planning-sync.sh
apps/agents/planning-ingestion/tools/: __init__.py  firecrawl_tool.py  gemini_filesearch.py  playwright_scraper.py
apps/web/: .mcp.json  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
data/incentives/: $25,000 STRONG Homes Loan Program.html  ARCH Program.html  (+2 more)
docs/: COST-ANALYSIS.md
patches/: mapbox-pmtiles@1.0.54.patch
product-plan/: README.md  product-overview.md
research/: MKE.dev Platform_ GIS Data Sources & Integration Strategy.md  competitive-landscape.md  mke_dev_implementation_guide_ts.md  mke_dev_prd.md
(+348 files in other folders)
